[gd_scene load_steps=25 format=3 uid="uid://bn4yyiiakrv88"]

[ext_resource type="Script" path="res://ratNPC.gd" id="1_e35mw"]
[ext_resource type="PackedScene" uid="uid://b2libjctk4b0k" path="res://scenes/ratGun.tscn" id="2_3f7cj"]
[ext_resource type="Material" uid="uid://dc4hfw2g0aq36" path="res://misc/hurtShaderMaterial.tres" id="2_c4h2j"]
[ext_resource type="Texture2D" uid="uid://c5p6qkkit5ss" path="res://textures/player textures/Rat.Projectile.png" id="2_wjgf2"]
[ext_resource type="AudioStream" uid="uid://dilha2s48w3st" path="res://sounds/rat noises/ratDie.wav" id="5_lj7ud"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rrr6r"]
atlas = ExtResource("2_wjgf2")
region = Rect2(0, 0, 32, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxlc3"]
atlas = ExtResource("2_wjgf2")
region = Rect2(32, 0, 32, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnjgn"]
atlas = ExtResource("2_wjgf2")
region = Rect2(64, 0, 32, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_ranfp"]
atlas = ExtResource("2_wjgf2")
region = Rect2(96, 0, 32, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_7yb21"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrr6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxlc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnjgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ranfp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bqlyd"]
radius = 41.0
height = 82.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_e4qyg"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath("AnimatedSprite2D:flip_h")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath("gun:rotation")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false
properties/3/path = NodePath(".:health")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = false
properties/4/path = NodePath(".:lastHurtDir")
properties/4/spawn = true
properties/4/sync = true
properties/4/watch = false
properties/5/path = NodePath("hurtAnimPlayer:current_animation")
properties/5/spawn = true
properties/5/sync = true
properties/5/watch = false

[sub_resource type="CircleShape2D" id="CircleShape2D_u3i81"]
radius = 61.0

[sub_resource type="Curve" id="Curve_6kwbg"]
_data = [Vector2(0.0213744, 0.949982), 0.0, 0.0, 0, 0, Vector2(0.676542, 0.425885), 0.0, 0.0, 0, 0, Vector2(0.923701, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_7784k"]
offsets = PackedFloat32Array(0, 0.664948, 1)
colors = PackedColorArray(0.395421, 0.127205, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0)

[sub_resource type="Animation" id="Animation_8ajsd"]
length = 0.001

[sub_resource type="Animation" id="Animation_8gclq"]
resource_name = "hurt"
length = 0.3
step = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.086, 0.337317, 1.20158, -0.042, -0.806455, 0.048, -1.21469, 0, -0.132, 0.28674, 0.25, 0),
"times": PackedFloat32Array(-0.007, 0.093, 0.276)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e58pm"]
_data = {
"RESET": SubResource("Animation_8ajsd"),
"hurt": SubResource("Animation_8gclq")
}

[sub_resource type="Curve" id="Curve_lv7ux"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.115385, 0.357895), 0.0, 0.0, 0, 0, Vector2(0.236264, 0.957895), 0.0, 0.0, 0, 0, Vector2(0.340659, 0.378947), 0.0, 0.0, 0, 0, Vector2(0.445055, 0.905263), 0.0, 0.0, 0, 0, Vector2(0.538462, 0.347368), 0.0, 0.0, 0, 0, Vector2(0.692308, 0.810526), 0.0, 0.0, 0, 0, Vector2(0.807692, 0.4), 0.0, 0.0, 0, 0, Vector2(0.917582, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0105263), 0.0, 0.0, 0, 0]
point_count = 10

[sub_resource type="Gradient" id="Gradient_aupdu"]
colors = PackedColorArray(0.73, 0.3212, 0.68912, 1, 1, 0.882353, 0.45098, 1)

[sub_resource type="Curve" id="Curve_e1yjp"]
max_value = 5.0
_data = [Vector2(0.043956, 0.936842), 0.0, 0.0, 0, 0, Vector2(0.230769, 2), 0.0, 0.0, 0, 0, Vector2(0.527473, 0.631579), 0.0, 0.0, 0, 0, Vector2(0.835165, 1.63158), 0.0, 0.0, 0, 0, Vector2(1, 0.631579), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="Gradient" id="Gradient_e3u6f"]
offsets = PackedFloat32Array(0, 0.536424, 1)
colors = PackedColorArray(0, 0.207843, 0.831373, 1, 0.641722, 0.236645, 0.8618, 1, 0.0431373, 1, 1, 1)

[sub_resource type="Animation" id="Animation_udgt8"]
resource_name = "appear"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("appearingParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("appeared:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimatedSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.6, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../gun:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.6, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ef7u1"]
_data = {
"appear": SubResource("Animation_udgt8")
}

[node name="rat" type="CharacterBody2D" groups=["takeDamage"]]
collision_layer = 128
motion_mode = 1
script = ExtResource("1_e35mw")

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -45.0
offset_right = 20.0
offset_bottom = -22.0
text = "rat
"
horizontal_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
material = ExtResource("2_c4h2j")
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_7yb21")
frame_progress = 0.155004

[node name="playerDetectCasts" type="Node2D" parent="."]

[node name="losCheck" type="RayCast2D" parent="playerDetectCasts"]
hit_from_inside = true

[node name="losCheck2" type="RayCast2D" parent="playerDetectCasts"]
position = Vector2(-79, 0)
hit_from_inside = true

[node name="losCheck3" type="RayCast2D" parent="playerDetectCasts"]
position = Vector2(80, -3)
hit_from_inside = true

[node name="losCheck4" type="RayCast2D" parent="playerDetectCasts"]
position = Vector2(1, -86)
hit_from_inside = true

[node name="losCheck5" type="RayCast2D" parent="playerDetectCasts"]
position = Vector2(0, 77)
hit_from_inside = true

[node name="wallDetects" type="Node2D" parent="."]

[node name="runClockwise" type="RayCast2D" parent="wallDetects"]
modulate = Color(1, 0, 1, 1)
target_position = Vector2(-40, 0)

[node name="runCounterClockwise" type="RayCast2D" parent="wallDetects"]
modulate = Color(1, 0, 1, 1)
target_position = Vector2(40, 0)

[node name="cornered" type="RayCast2D" parent="wallDetects"]
modulate = Color(1, 1, 0, 1)
target_position = Vector2(0, -24)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 0.01
neighbor_distance = 200.0
time_horizon_agents = 20.0
time_horizon_obstacles = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_bqlyd")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_e4qyg")

[node name="ratAvoidanceArea" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 768

[node name="CollisionShape2D" type="CollisionShape2D" parent="ratAvoidanceArea"]
shape = SubResource("CircleShape2D_u3i81")

[node name="gun" parent="." instance=ExtResource("2_3f7cj")]

[node name="dir" type="Node2D" parent="."]

[node name="arrow" type="Node2D" parent="dir"]
visible = false

[node name="ColorRect2" type="ColorRect" parent="dir/arrow"]
offset_left = 1.0
offset_top = -2.0
offset_right = 86.0
offset_bottom = 2.0

[node name="ColorRect3" type="ColorRect" parent="dir/arrow"]
offset_left = 59.0
offset_top = -19.0
offset_right = 92.0
offset_bottom = -15.0
rotation = 0.588661

[node name="ColorRect4" type="ColorRect" parent="dir/arrow"]
offset_left = 56.0
offset_top = 14.0
offset_right = 89.0
offset_bottom = 18.0
rotation = -0.497019

[node name="antiStuckOnCornerCast" type="RayCast2D" parent="dir"]
target_position = Vector2(50, 50)

[node name="antiStuckOnCornerCast2" type="RayCast2D" parent="dir"]
target_position = Vector2(50, -50)

[node name="deathParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 32
lifetime = 0.25
one_shot = true
explosiveness = 0.7
lifetime_randomness = 0.7
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(1, 2.08165e-12)
spread = 35.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 200.0
initial_velocity_max = 300.0
scale_amount_min = 8.0
scale_amount_max = 12.0
scale_amount_curve = SubResource("Curve_6kwbg")
color_ramp = SubResource("Gradient_7784k")

[node name="hurtAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e58pm")
}

[node name="appearing" type="Node2D" parent="."]

[node name="appearingParticles" type="CPUParticles2D" parent="appearing"]
emitting = false
amount = 50
lifetime = 1.6
one_shot = true
explosiveness = 0.4
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 600.0
initial_velocity_max = 600.0
orbit_velocity_min = 2.0
orbit_velocity_max = 2.0
scale_amount_min = 10.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_lv7ux")
color_ramp = SubResource("Gradient_aupdu")

[node name="appeared" type="CPUParticles2D" parent="appearing"]
emitting = false
amount = 32
lifetime = 0.5
one_shot = true
explosiveness = 0.8
lifetime_randomness = 0.84
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 400.0
initial_velocity_max = 700.0
angular_velocity_min = -72.72
angular_velocity_max = 72.73
damping_min = 200.0
damping_max = 200.0
scale_amount_min = 15.0
scale_amount_max = 25.0
scale_amount_curve = SubResource("Curve_e1yjp")
color_ramp = SubResource("Gradient_e3u6f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="appearing"]
libraries = {
"": SubResource("AnimationLibrary_ef7u1")
}

[node name="die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_lj7ud")
